답변 수정, 추천 시에도 스크롤 내려가도록 수정